chore: upgrade to java25 and latest versions of supporting libraries (#550)