@@ -59,7 +59,7 @@ public abstract class OData {
        * We explicitly do not use the singleton pattern to keep the server state
        * free and avoid class loading issues also during hot deployment.
        */
-      final Object object = clazz.newInstance();
+      final Object object = clazz.getDeclaredConstructor().newInstance();
 
       return (OData)object;
 
